bug(align smiley properly): align smiley and increase font-size of messages
- increase font-size of message sent
- align smiley properly with sender's name
- increase font-size of time sent
- increase spacing between letters in message sent.

[Finishes #153756414]

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -84,13 +84,16 @@
 }
 .messages > p.message-p {
   color: #150366;
-  font-size: 12px;
+  font-size: 14px;
   font-family: "Roboto" !important;
+  letter-spacing: 1px;
   margin: 0 0 0.2rem 0;
+  padding-bottom: 5px;
 }
 .messages > time {
   color: #150366;
-  font-size: 11px;
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .panel-collapsed {
@@ -106,8 +109,8 @@
   display: block;
   width: 40px;
   float: left;
-  padding-bottom: 25px;
-  height: 65px;
+  padding-bottom: 50px;
+  height: 90px;
 }
 .avatar {
   position: relative;
@@ -168,23 +171,24 @@
 }
 
 #btn-chat {
-  color: wheat !important;
-  font-size: 12px;
+  color: white !important;
+  font-size: 13px;
   width: 50px !important;
-  height: 30px !important;
+  height: 34px !important;
 }
 
 #btn-chat:hover {
   background-color: #391c5f !important;
   color: white !important;
   font-weight: bold !important;
-  font-size: 10px !important;
+  font-size: 13px !important;
 }
 
 .username-p {
   color: #391c5f;
   font-family: "Roboto" !important;
   font-size: 12px !important;
+  font-weight: bold;
   padding-top: 10px;
   text-transform: lowercase;
 }
